--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-2Y+70iCDglMCksX8yD2snCsnYa5sEpuJ0m+Mst5mRWgjaZxoj7lx4nlqirV2jVwchc2exFXXPVb1l4s/IEjzw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script
+      src="https://kit.fontawesome.com/cafa440bca.js"
+      crossorigin="anonymous"
+    ></script>
     <script src="app.js"></script>
   </head>
   <body>
@@ -77,9 +88,18 @@
             data-parent="#accordionExample"
           >
             <div class="card-body">
-              <div class="note-div" id="element-text"></div>
-              <button class="myBtn on" id="play-btn">Play Single Note</button>
-              <button class="myBtn off" id="pause-btn">Show Single Note</button>
+              <div class="left">
+                <div id="play-btn">
+                  <i class="fas fa-play-circle fa-2x icon"></i>
+                </div>
+                <div id="pause-btn">
+                  <i class="fas fa-comment-dots fa-2x icon"></i>
+                </div>
+                <div id="replay-btn1">
+                  <i class="fas fa-reply-all fa-2x icon"></i>
+                </div>
+                <div class="note-div" id="element-text"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -103,13 +123,18 @@
             data-parent="#accordionExample"
           >
             <div class="card-body">
-              <div class="tq-div" id="tati-text"></div>
-              <button class="myBtn on" id="playtati-btn" data-seq="2">
-                Play Ta Ti
-              </button>
-              <button class="myBtn off" id="showtati-btn" data-seq="2">
-                Show Ta Ti
-              </button>
+              <div class="left">
+                <div id="playtati-btn">
+                  <i class="fas fa-play-circle fa-2x icon" data-seq="2"></i>
+                </div>
+                <div id="showtati-btn">
+                  <i class="fas fa-comment-dots fa-2x icon" data-seq="2"></i>
+                </div>
+                <div id="replay-btn2">
+                  <i class="fas fa-reply-all fa-2x icon"></i>
+                </div>
+                <div class="note-div" id="tati-text"></div>
+              </div>
             </div>
           </div>
         </div>
@@ -133,13 +158,18 @@
             data-parent="#accordionExample"
           >
             <div class="card-body">
-              <div class="tq-div" id="tq-text"></div>
-              <button class="myBtn on" id="playtq-btn" data-seq="4">
-                Play Tiqui Taqa
-              </button>
-              <button class="myBtn off" id="showtq-btn" data-seq="4">
-                Show Tiqui Taqa
-              </button>
+              <div class="left">
+                <div id="playtq-btn">
+                  <i class="fas fa-play-circle fa-2x icon" data-seq="4"></i>
+                </div>
+                <div id="showtq-btn">
+                  <i class="fas fa-comment-dots fa-2x icon" data-seq="4"></i>
+                </div>
+                <div id="replay-btn3">
+                  <i class="fas fa-reply-all fa-2x icon"></i>
+                </div>
+                <div class="note-div" id="tq-text"></div>
+              </div>
             </div>
           </div>
         </div>
