--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
         <button class="myBtn tone-btn" data-note="4">sol</button>
         <button class="myBtn tone-btn" data-note="5">la</button>
         <button class="myBtn tone-btn" data-note="6">si</button>
-        <button class="myBtn tone-btn" data-note="7">do-</button>
-        <button class="myBtn tone-btn" data-note="8">ri-</button>
+        <button class="myBtn tone-btn" data-note="7">do</button>
+        <button class="myBtn tone-btn" data-note="8">ri</button>
       </div>
 
       <!-- keybord -->
@@ -232,9 +232,9 @@
         <li note="A" class="white offset" data-key="la">La</li>
         <li note="A#" class="black"></li>
         <li note="B" class="white offset" data-key="si">Si</li>
-        <li note="C2" class="white" data-key="do-">Do-</li>
+        <li note="C2" class="white" data-key="do-">Do</li>
         <li note="C#2" class="black"></li>
-        <li note="D2" class="white offset" data-key="ri-">Ri-</li>
+        <li note="D2" class="white offset" data-key="ri-">Ri</li>
       </ul>
     </div>
 
