--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Ear Training</title>
     <link rel="stylesheet" href="fontawesome/css/all.min.css" />
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css" />
+    <link rel="icon" href="./images/icon.png" type="image/png" />
 
     <link rel="stylesheet" type="text/css" href="style.css" />
 
